--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -109,10 +109,12 @@ layout: default
   }());
 </script>
 -->
+{% endif %}
+
 {% if page.comments %}
   <div id="disqus_thread"></div>
   <script>
-
+    var disqus_developer = 1;
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
@@ -131,7 +133,6 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-{% endif %}		
  <script id="dsq-count-scr" src="//snandan-github-io.disqus.com/count.js" async></script>
 
 {% endif %}
