--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,9 @@
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico?v=8jjamLzmpR">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png?v=8jjamLzmpR">
+    <script type="text/javascript" async
+            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
 </head>
 <!-- Header: end -->
 
